新增 XLSX 模块功能接口。main做调试功能。

--- a/src/xlsx_handle/CMakeLists.txt
+++ b/src/xlsx_handle/CMakeLists.txt
@@ -1,6 +1,11 @@
 file(GLOB COMMON_SRC ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
 message(STATUS "xlsx handle sources: ${COMMON_SRC}")
 
+if(CMAKE_CXX_COMPILER_ID MATCHES "GNU")
+    add_compile_options(-Wno-deprecated-declarations)
+endif()
+
+
 add_library(xlsx_handle STATIC ${COMMON_SRC})
 
 target_include_directories(xlsx_handle PUBLIC
