增加UI控件 修改生成文件规则： - 增加名称列 - 增加查找文件列

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,12 +4,12 @@ project(yu_xlsx)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_ON ON)
 
-# Qt 所需
-# set(CMAKE_PREFIX_PATH "D:/QT/5.12.9/mingw73_64/lib/cmake")
-# find_package(Qt5 REQUIRED COMPONENTS Core Gui Widgets PrintSupport)
-# set(CMAKE_AUTOMOC ON)
-# set(CMAKE_AUTOUIC ON)
-# set(CMAKE_AUTORCC ON)
+#Qt 所需
+set(CMAKE_PREFIX_PATH "D:/QT/5.12.9/mingw73_64/lib/cmake")
+find_package(Qt5 REQUIRED COMPONENTS Core Gui Widgets PrintSupport)
+set(CMAKE_AUTOMOC ON)
+set(CMAKE_AUTOUIC ON)
+set(CMAKE_AUTORCC ON)
 
 # 头文件
 include_directories(
@@ -28,10 +28,10 @@ add_subdirectory(src/excel_finder)
 add_subdirectory(src/xlsx_handle)
 add_subdirectory(src/configfile)
 add_subdirectory(src/utils)
-#add_subdirectory(src/ui)
+add_subdirectory(src/ui)
 
 # 主程序
-add_executable(yu_xlsx src/main.cpp)
+add_executable(yu_xlsx WIN32 src/main.cpp)
 
 # 三方库
 # OpenXLSX
@@ -48,5 +48,5 @@ target_link_libraries(yu_xlsx
         xlsx_handle
         configfile
         utils
-#        ui
+        ui
 )
